src/test/deca/syntax/invalid/created/demo.deca
// Description :
//    test de demonstration
//
// Resultats :
//		

//class mal écrit
clss A { 

	protected int x;
	
	int getX(){
		//il manque un ";"
		return x
	}
	
//il manque un "}"
	
	
	
{

	a.x;
	a.geX(0);
}